fix interface hidden behind logs

--- a/src/styles/player_home.less
+++ b/src/styles/player_home.less
@@ -920,6 +920,10 @@
   animation:smoth-fade-animation 2000ms infinite;
 }
 
+#player-home {
+    width: calc(100vw - 475px)
+}
+
 .log-container {
     position: fixed;
     right: 0;
