--- a/src/styles/players_overview.less
+++ b/src/styles/players_overview.less
@@ -268,7 +268,7 @@
     position: relative;
 }
 
-@media only screen and (max-width: 1740px)  {
+@media only screen and (max-width: 2150px)  {
     .players-overview {
         .player-info {
             flex-flow: column !important;
